package io.github.rohergun.budgetmanager.transaction;

public enum TransactionType
{
    INCOME,
    EXPENSE
}
